<resources>
    <string name="app_name">AniShark</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_catalog">Catalog</string>
    <string name="bottom_nav_bookmark">Bookmarks</string>

    <string name="query_hint">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_theme_icon_description">Theme change</string>
    <string name="home_actual_of_season">Actual of the season</string>
    <string name="home_tops">Tops</string>
    <string name="home_show_more">More</string>
    <string name="episodes">%1$s EP</string>
    <string name="ongoing">ON</string>
    <string name="ongoing_full">Ongoing / No episodes</string>
    <string name="anime_screen_episodes_text">%1$d episodes</string>
    <string name="anime_screen_season_text">Season: %1$s</string>
    <string name="anime_screen_studio_text">Studio: %1$s</string>
    <string name="anime_screen_description_title">Description</string>
    <string name="anime_screen_trailer_title">Trailer</string>
    <string name="empty_bookmark_text">The bookmarks are empty</string>
    <string name="no_rating_yet">No rating yet</string>
</resources>