<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookmarks_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_anime_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:alpha="0.7"
                android:background="@color/white" />

            <ImageButton
                android:id="@+id/ic_anime_screen_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="14dp"
                android:background="@null"
                android:src="@drawable/ic_back" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:elevation="0dp"
                app:cardCornerRadius="18dp">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="186dp"
                    android:layout_height="262dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_anime_image" />
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/anime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Pomogite"
                android:textColor="@color/onSurface"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/anime_title_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:alpha="0.5"
                android:fontFamily="@font/roboto"
                android:text="Pomogite na angliskom"
                android:textColor="@color/onSurface"
                android:textSize="18sp"
                app:layout_constrainedWidth="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/anime_rating_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@id/anime_title_english"
                app:layout_constraintStart_toEndOf="@id/anime_title_english"
                app:layout_constraintTop_toTopOf="@id/anime_title_english"
                app:layout_constraintVertical_bias="1">

                <TextView
                    android:id="@+id/anime_rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:fontFamily="@font/roboto"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    android:text="PG-13"
                    android:textColor="@color/onAge" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="anime_title_english, anime_rating_card"
                app:flow_horizontalBias="0"
                app:flow_horizontalGap="10dp"
                app:flow_horizontalStyle="packed"
                app:flow_verticalGap="5dp"
                app:flow_verticalStyle="packed"
                app:flow_wrapMode="chain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anime_title" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/anime_screen_header_bottom_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="anime_title, anime_title_english, anime_rating_card" />

            <ImageView
                android:id="@+id/ic_anime_screen_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_anime_screen_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/anime_screen_header_bottom_barrier" />

            <TextView
                android:id="@+id/anime_screen_rating_text"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="9.43"
                app:layout_constraintBottom_toBottomOf="@id/ic_anime_screen_star"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_star"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_star" />

            <ImageView
                android:id="@+id/ic_anime_screen_episodes"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/ic_anime_screen_episodes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_anime_screen_star" />

            <TextView
                android:id="@+id/anime_screen_episodes_text"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/anime_screen_episodes_text"
                app:layout_constraintBottom_toBottomOf="@id/ic_anime_screen_episodes"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_episodes"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_episodes" />

            <ImageView
                android:id="@+id/ic_anime_screen_season"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/ic_anime_screen_season"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_anime_screen_episodes" />

            <TextView
                android:id="@+id/anime_screen_season_text"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/anime_screen_season_text"
                app:layout_constraintBottom_toBottomOf="@id/ic_anime_screen_season"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_season"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_season" />

            <ImageView
                android:id="@+id/ic_anime_screen_studio"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/ic_anime_screen_studio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_anime_screen_season" />

            <TextView
                android:id="@+id/anime_screen_studio_text"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/anime_screen_studio_text"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_studio"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_studio" />

            <ImageButton
                android:id="@+id/ic_anime_screen_bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#00475D92"
                android:src="@drawable/ic_anime_screen_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/anime_screen_header_bottom_barrier" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/short_info_bottom_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="anime_screen_studio_text, ic_anime_screen_studio,
                    anime_screen_season_text, ic_anime_screen_season,
                    anime_screen_episodes_text, ic_anime_screen_episodes,
                    anime_screen_rating_text, ic_anime_screen_star,
                    ic_anime_screen_bookmark" />

            <ImageView
                android:id="@+id/ic_anime_screen_description"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_anime_screen_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/short_info_bottom_barrier" />

            <TextView
                android:id="@+id/anime_screen_description_title"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/anime_screen_description_title"
                app:layout_constraintBottom_toBottomOf="@id/ic_anime_screen_description"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_description"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_description" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/short_description_bottom_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="ic_anime_screen_description, anime_screen_description_title" />

            <TextView
                android:id="@+id/anime_screen_description_text"
                style="@style/anime_screen_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lineHeight="20sp"
                android:text="Eikichi Onizuka, a former member of the terrifying Onibaku gang, sets his sights on becoming the coolest school teacher in the world. Why a teacher? Because schools are full of sexy high school girls!"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/short_description_bottom_barrier" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/full_description_bottom_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="ic_anime_screen_description, anime_screen_description_title, anime_screen_description_text" />

            <ImageView
                android:id="@+id/ic_anime_screen_trailer"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_anime_screen_trailer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_description_bottom_barrier" />

            <TextView
                android:id="@+id/anime_screen_trailer_title"
                style="@style/anime_screen_medium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/anime_screen_trailer_title"
                app:layout_constraintBottom_toBottomOf="@id/ic_anime_screen_trailer"
                app:layout_constraintStart_toEndOf="@id/ic_anime_screen_trailer"
                app:layout_constraintTop_toTopOf="@id/ic_anime_screen_trailer" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/trailer_title_bottom_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="anime_screen_trailer_title, ic_anime_screen_trailer" />

            <VideoView
                android:id="@+id/anime_screen_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trailer_title_bottom_barrier" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>